--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 
         <script src="angular/angular/angular.min.js"></script>
         <script src="angular/angular-route/angular-route.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-animate.js"></script>
+        <script src="ui-bootstrap/ui-bootstrap-custom-0.13.4.js"></script>
+        <script src="ui-bootstrap/ui-bootstrap-custom-tpls-0.13.4.js"></script>
 
         <!-- media-queries.js (fallback) -->
         <!--[if lt IE 9]>
@@ -68,7 +71,7 @@
                                 <div role="tabpanel" class="tab-pane active" id="registro">
                                     <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
                                     <span class="icon-facebook margin--r2"></span> 
-                                        Regístrate con facebook
+                                        Regístrate con facebook 2
                                     </fb:login-button>
                                     <p class="text text-center text--gris">
                                         O
