--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                             </ul>
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="registro">
-                                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();" style="margin-left: 24%">
                                     <span class="icon-facebook margin--r2"></span> 
-                                        Regístrate con facebook 2
+                                        Regístrate con facebook
                                     </fb:login-button>
                                     <p class="text text-center text--gris">
                                         O
@@ -82,6 +82,7 @@
                                             <input type="text" class="form-control form-control--form" placeholder="Correo Electrónico" ng-model="userEmail">
                                             <input type="password" class="form-control form-control--form" placeholder="Contraseña" ng-model="userPasswordNew">
                                         </div>
+                                        <div class="alert alert-danger text-center" ng-show="alertError"><span id="errorLogin"></span></div>
                                         <div class="col-xs-12 bg-gris margin--b1">
                                             <p class="text text--xs text--gris">
                                                 Al hacer clic en “crear una cuenta”, aceptas las Condiciones y confirmas que leíste nuestra Política de datos, incluido el uso de cookies.
@@ -95,7 +96,7 @@
                                     </form>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="ingreso">
-                                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();" style="margin-left: 24%">
                                     <span class="icon-facebook margin--r2"></span> 
                                         Ingresa con facebook
                                     </fb:login-button>
@@ -111,7 +112,7 @@
                                         <div class="alert alert-danger text-center" ng-show="alertFields"><span>Todos los campos se deben diligenciar</span></div>
                                         <div class="alert alert-danger text-center" ng-show="alertData"><span>El nombre de usuario y/o la contraseña son incorrectos.</span></div>
                                         <input type="submit" class="btn btn-verde btn--lite btn-block text--upper" ng-click="singUp()" value="iniciar sesión">
-                                        <a class="text text--azul text--sm text-center center-block margin--t1">Olvíde mi contraseña </a>
+                                        <!-- <a class="text text--azul text--sm text-center center-block margin--t1">Olvíde mi contraseña </a>  -->
                                     </form>
                                 </div>
                             </div>
@@ -133,7 +134,6 @@
         <script src="controllers/ctrl.js"></script>
         <!-- Models -->
         <script src="models/models.js"></script>
-        
 
     </body>
 </html>
