--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     </p>
                                     <form>
                                         <div class="form-group">
-                                            <input type="text" class="form-control form-control--form" placeholder="Correo Electrónico" ng-model="userName">
+                                            <input type="text" class="form-control form-control--form" placeholder="Nombre de usuario" ng-model="userName">
                                             <input type="password" class="form-control form-control--form" placeholder="Contraseña" ng-model="userPassword">
                                         </div>
                                         <div class="alert alert-danger text-center" ng-show="alertFields"><span>Todos los campos se deben diligenciar</span></div>
