--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
                             </ul>
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane active" id="registro">
-                                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState(true);" style="margin-left: 24%">
-                                    <span class="icon-facebook margin--r2"></span> 
-                                        Regístrate con facebook
-                                    </fb:login-button>
+                                    
+                                        
+                                    <input type="submit" class="btn btn-verde btn--lite btn-block text--upper" ng-click="FBLogin(true)" value="Regístrate con facebook">
                                     <p class="text text-center text--gris">
                                         O
                                     </p>
@@ -96,10 +95,7 @@
                                     </form>
                                 </div>
                                 <div role="tabpanel" class="tab-pane" id="ingreso">
-                                    <fb:login-button scope="public_profile,email" onlogin="checkLoginState(false);" style="margin-left: 24%">
-                                    <span class="icon-facebook margin--r2"></span> 
-                                        Ingresa con facebook
-                                    </fb:login-button>
+                                    <input type="submit" class="btn btn-verde btn--lite btn-block text--upper" ng-click="FBLogin(false)" value="iniciar con facebook">
 
                                     <p class="text text-center text--gris">
                                         O
