new controller for api

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <script src="ui-bootstrap/ui-bootstrap-custom-0.13.4.js"></script>
         <script src="ui-bootstrap/ui-bootstrap-custom-tpls-0.13.4.js"></script>
 
+        <!-- <script src="js/jquery.ellipsis.js"></script> -->
+
         <!-- media-queries.js (fallback) -->
         <!--[if lt IE 9]>
             <script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>           
