--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" ng-app="App">
+<html class="no-js" ng-app="App" lang="es">
     <head>
     
         <meta charset="utf-8">
