--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
 
         <!-- App -->
         <script src="js/main.js"></script>
+        <!-- Ellipsis -->
+        <script src="js/angular-ellipsis.js"></script>
         <!-- Controllers -->
         <script src="controllers/ctrl.js"></script>
         <!-- Models -->
