--- a/index.html
+++ b/index.html
@@ -131,7 +131,12 @@
 
         <script src="js/loader.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script> 
+        <!-- Configuration file -->
         <script src="js/config.json"></script>
+        <!-- Exceptions -->
+        <script src="js/exceptions.js"></script>
+        <!-- Functions -->
+        <script src="js/functions.js"></script>
         <!--- //// MVC ///// -->
 
         <!-- App -->
@@ -142,6 +147,7 @@
         <script src="controllers/ctrl.js"></script>
         <!-- Models -->
         <script src="models/models.js"></script>
-
+        <!-- Directives -->
+        <script src="js/directives.js"></script>
     </body>
 </html>
