--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <script src="angular/angular/angular.min.js"></script>
         <script src="angular/angular-route/angular-route.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.6/angular-animate.js"></script>
+        <script src="js/angular-animate.js"></script>
         <script src="ui-bootstrap/ui-bootstrap-custom-0.13.4.js"></script>
         <script src="ui-bootstrap/ui-bootstrap-custom-tpls-0.13.4.js"></script>
 
