--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- contenedor Dinamico -->
         <div  ng-view id="content-app"></div>
         <!-- footer -->
-        <!--<div class="hidden" ng-include="'views/footer.html'"></div>-->
+        <div class="" ng-include="'views/footer.html'"></div>
         <!--  MODAL DE INGRESO  -->
     </body>
 </html>
