--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" ng-app="App" lang="es">
     <head>
-        <base href="/" />
+    <!--<base href="/" />-->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Marketing University: Entrenate, Certifica tus conocimientos en Marketing Digital</title>
